--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ActivityRegistrarAnimal"></activity>
+        <activity
+            android:name=".ActivityRegistrarAnimal"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ActivityMenuKeeper"
             android:screenOrientation="portrait" />
