--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ActivityFiltro"></activity>
+        <activity android:name=".ActivityPerfilAnimal"></activity>
+        <activity android:name=".ActivityFiltro" />
         <activity
             android:name=".ActivityRegistrarAnimal"
             android:screenOrientation="portrait" />
