--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".ActivityPerfilAnimal"></activity>
-        <activity android:name=".ActivityFiltro" />
+        <activity android:name=".ActivityFiltro"
+            android:windowSoftInputMode="stateHidden"/>
         <activity
             android:name=".ActivityRegistrarAnimal"
             android:screenOrientation="portrait" />
