--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".views.ActivityBuscarInstituciones"></activity>
+        <activity android:name=".views.ActivityPerfilInstitucion"></activity>
+        <activity android:name=".views.ActivityBuscarInstituciones" />
         <activity android:name=".views.ActivityPerfilAnimal" />
         <activity
             android:name=".views.ActivityFiltro"
