--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,12 +17,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ActivityPerfilAnimal"></activity>
-        <activity android:name=".ActivityFiltro"
-            android:windowSoftInputMode="stateHidden"/>
+        <activity android:name=".ActivityTipoRegistro" />
+        <activity android:name=".ActivityRegistrarAnimal" />
+        <activity android:name=".ActivityRegistrarFundacion" />
+        <activity android:name=".ActivityRegistrarPersona" />
+        <activity android:name=".ActivityPerfilAnimal" />
         <activity
-            android:name=".ActivityRegistrarAnimal"
-            android:screenOrientation="portrait" />
+            android:name=".ActivityFiltro"
+            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".ActivityMenuKeeper"
             android:screenOrientation="portrait" />
