--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,12 +22,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".views.ActivityFormalizarAdopcion"
+        <activity android:name=".views.ActivityVerHistorias"></activity>
+        <activity
+            android:name=".views.ActivityFormalizarAdopcion"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden"/>
-        <activity android:name=".views.ActivityPerfilPersona"
+            android:windowSoftInputMode="stateHidden" />
+        <activity
+            android:name=".views.ActivityPerfilPersona"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden"/>
+            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".views.ActivityRecogerAdoptado"
             android:parentActivityName=".views.ActivityMenuAdoptante"
