--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".views.ActivityVerHistorias"></activity>
+        <activity android:name=".views.ActivityRegistrarEvento"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden" />
+        <activity android:name=".views.ActivityVerHistorias"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".views.ActivityFormalizarAdopcion"
             android:screenOrientation="portrait"
