--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,8 +22,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".views.ActivityVerEventos"></activity>
-        <activity android:name=".views.ActivityDetalleEvento" />
+        <activity android:name=".views.ActivityVerEventos"
+            android:screenOrientation="portrait" />
+        <activity android:name=".views.ActivityDetalleEvento"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden"/>
         <activity
             android:name=".views.ActivityRegistrarEvento"
             android:screenOrientation="portrait"
