--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,10 @@
         android:theme="@style/AppTheme">
         <activity android:name=".views.ActivityVerEventos"
             android:screenOrientation="portrait" />
+
+        <activity android:name=".views.Chat"
+            android:screenOrientation="portrait" />
+
         <activity android:name=".views.ActivityDetalleEvento"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden"/>
